# murphyx-ai-company

./: .env.example  .env.local.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
api/routes/: __init__.py  agents.py  tasks.py  workflows.py
apps/pet-grooming-saas/: README.md  docker-compose.yml
assets/: README.md
docs/: agent_roles.md  agents.md  architecture.md  artifacts.md  demo_walkthrough.md  runtime_philosophy.md  testing_quickstart.md  workflow_design.md  workflows.md
examples/: build_pet_saas_demo.py  run_company.py  run_saas_builder.py  run_single_agent.py
murphyx/: __init__.py  config.py
murphyx/agents/: __init__.py  somchai_pm.py  somjit_marketing.py  somporn_customer_success.py  somsak_backend.py  somying_frontend.py
murphyx/api/: __init__.py  main.py
murphyx/observability/: README.md  __init__.py
murphyx/orchestrator/: __init__.py  ceo_agent.py  planner.py  task_router.py
murphyx/prompts/: backend_prompt.txt  ceo_prompt.txt  frontend_prompt.txt  marketing_prompt.txt  sombat_devops_prompt.txt  somchai_pm_prompt.txt  somchok_sales_prompt.txt  somjai_qa_prompt.txt  somphop_docs_prompt.txt  somporn_cs_prompt.txt  somruedee_ux_prompt.txt
murphyx/queue/: __init__.py  redis_queue.py  task_schema.py
murphyx/runtime/: __init__.py  agent_runtime.py  role_switcher.py  worker_loop.py
murphyx/services/: __init__.py  artifact_store.py  github_service.py  llm_client.py  playwright_service.py
murphyx/tools/: README.md  __init__.py  base.py  (+2 more)
scripts/: dev_env.sh  run_worker.sh  run_workflow.py  start_redis.sh  start_runtime.py
tests/: __init__.py  conftest.py  test_agents.py  test_queue.py  test_runtime.py  test_workflows.py
(+17 files in other folders)
