# MurphyX AI Company — Python package manifest (scaffold).
# Full dependency pins and build config to be finalized when runtime is implemented.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murphyx-ai-company"
version = "0.1.0"
description = "Multi-agent AI company framework — runtime, orchestrator, and example workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]
# TODO: Add redis, httpx when queue and LLM client are wired.

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["murphyx*"]
