# MurphyX AI Company — Python package manifest (scaffold).
# Full dependency pins and build config to be finalized when runtime is implemented.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murphyx-ai-company"
version = "0.1.0"
description = "Multi-agent AI company framework — runtime, orchestrator, and example workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "redis>=5.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "fakeredis>=2.21",
  "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["murphyx*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
